<?xml version="1.0"?>
<package format="2">
  <name>zeh_s11_driver</name>
  <version>1.0.0</version>
  <description>ROS driver for Winsen ZEHS11 Multi-Sensor Converter Board. Supports UART communication and publishes temperature, humidity, and gas concentrations.</description>

  <maintainer email="xiang_he@buaa.edu.cn">Jack He</maintainer>
  <author email="xiang_he@buaa.edu.cn">Jack He BUAA</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend-->


  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>
  <depend>message_runtime</depend>

  <url type="website">http://www.winsensor.com</url>
  <url type="bugtracker">https://github.com/your_repo/issues</url>

</package>